# modern-cpp-challenge-solutions

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
AlgorithmsDataStructures/: CMakeLists.txt
AlgorithmsDataStructures/include/: algorithms_data_structures.h
ArchivesImagesDatabases/: CMakeLists.txt
ArchivesImagesDatabases/include/: archives_images_databases.h
Concurrency/: CMakeLists.txt
Concurrency/include/: concurrency.h
Cryptography/: CMakeLists.txt
Cryptography/include/: cryptography.h
DateTime/: CMakeLists.txt
DateTime/include/: datetime.h
DesignPatterns/: CMakeLists.txt
DesignPatterns/include/: design_patterns.h
LanguageFeatures/: CMakeLists.txt
LanguageFeatures/include/: language_features.h
MathProblems/: CMakeLists.txt
MathProblems/include/: math_problems.h  math_utils.h  prime_utils.h
MathProblems/src/: math_problems.cpp  math_utils.cpp  prime_utils.cpp  problem_001_sum_multiples.cpp  problem_002_gcd.cpp  problem_003_lcm.cpp  problem_004_largest_prime_below.cpp  problem_005_prime_pairs.cpp  problem_006_abundant_numbers.cpp  problem_007_amicable_numbers.cpp  problem_008_armstrong_numbers.cpp  problem_009_prime_factors.cpp  problem_010_gray_code.cpp  problem_011_to_roman.cpp  problem_012_collatz_sequence.cpp  problem_013_calculate_pi.cpp  problem_014_isbn_validation.cpp
NetworkingServices/: CMakeLists.txt
NetworkingServices/include/: networking_services.h
Serialization/: CMakeLists.txt
Serialization/include/: serialization.h
StreamsFilesystem/: CMakeLists.txt
StreamsFilesystem/include/: streams_filesystem.h
StringsRegex/: CMakeLists.txt
StringsRegex/include/: strings_regex.h
scripts/: check.sh  format.sh
tests/: CMakeLists.txt
tests/MathProblems/: math_utils_test.cpp  prime_utils_test.cpp  problem_001_sum_multiples_test.cpp  problem_002_gcd_test.cpp  problem_003_lcm_test.cpp  problem_004_largest_prime_below_test.cpp  problem_005_prime_pairs_test.cpp  problem_006_abundant_numbers_test.cpp  problem_007_amicable_numbers_test.cpp  problem_008_armstrong_numbers_test.cpp  problem_009_prime_factors_test.cpp  problem_010_gray_code_test.cpp  problem_011_to_roman_test.cpp  problem_012_collatz_sequence_test.cpp  problem_013_calculate_pi_test.cpp  problem_014_isbn_validation_test.cpp
